--- a/www/style.css
+++ b/www/style.css
@@ -14,10 +14,17 @@ body {
 #content {
     min-height: 100%;
     margin-bottom: -200px; /* Equivalent to footer's height */
-}
+    padding-bottom: 200px; /* Equivalent to footer's height */
+    
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;}
 
-.spacer, #footer {
-      z-index: 1;
+#footer{
+    width: 100%;
+    height: 100px;
+    position: fixed;
+    bottom: 0px;
 }
 
  h3{
